--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
             android:name=".project.MainActivity"
-            android:label="@string/title_activity_main"
+            android:label="@string/app_name"
             android:theme="@style/Crs.NoActionBar"
             >
             <intent-filter>
@@ -36,11 +36,13 @@
 
         <activity
             android:name=".settings.SettingsActivity"
+            android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
             />
 
         <activity
             android:name=".settings.SettingsActivityCompat"
+            android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
             />
     </application>
