--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         >
 
         <activity
-            android:name=".main.MainActivity"
+            android:name=".launchscreen.LaunchScreenActivity"
             android:label="@string/app_name"
             android:theme="@style/Crs.NoActionBar"
+            android:screenOrientation="portrait"
+            android:noHistory="true"
             >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,11 +29,18 @@
         </activity>
 
         <activity
-            android:name=".login.LoginActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
-            android:label="@string/title_login_activity"
-            android:noHistory="true"
+            android:name=".main.MainActivity"
+            android:label="@string/app_name"
             android:theme="@style/Crs.NoActionBar"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
+            />
+
+        <activity
+            android:name=".login.LoginActivity"
+            android:label="@string/title_login_activity"
+            android:theme="@style/Crs.NoActionBar"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
+            android:noHistory="true"
             android:windowSoftInputMode="stateVisible|adjustResize"
             />
 
@@ -38,12 +48,14 @@
             android:name=".settings.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             />
 
         <activity
             android:name=".settings.SettingsActivityCompat"
             android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             />
     </application>
 
