--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".launchscreen.LaunchScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/Crs.NoActionBar"
+            android:theme="@style/Crs.LaunchScreen"
             android:screenOrientation="portrait"
             android:noHistory="true"
             >
