--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,45 +12,52 @@
         android:theme="@style/Crs"
         tools:ignore="AllowBackup,UnusedAttribute"
         >
+
         <activity
-            android:name=".launchscreen.LaunchScreenActivity"
+            android:name=".main.MainActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/app_name"
-            android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/Crs.LaunchScreen"
+            android:theme="@style/Crs.NoActionBar"
+            android:launchMode="singleTop"
             >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".main.MainActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
+            android:name=".launchscreen.LaunchScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/Crs.NoActionBar"
+            android:screenOrientation="portrait"
+            android:theme="@style/Crs.LaunchScreen"
+            android:noHistory="true"
             />
+
         <activity
             android:name=".login.LoginActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/title_login_activity"
-            android:noHistory="true"
             android:theme="@style/Crs.NoActionBar"
             android:windowSoftInputMode="stateVisible|adjustResize"
             />
+
         <activity
             android:name=".settings.SettingsActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
             />
+
         <activity
             android:name=".settings.SettingsActivityCompat"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/title_activity_settings"
             android:theme="@style/Crs.NoActionBar"
             />
+
         <activity
             android:name=".stage.StageActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
