--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,7 @@
         </activity>
         <activity
             android:name=".checkin.CheckinActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/title_activity_checkin"
             android:parentActivityName=".step.WorkStepActivity"
             android:theme="@style/Crs.NoActionBar"
