--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,13 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:commons:0.8.5.3@aar') { transitive = true }
     compile 'com.android.support:recyclerview-v7:23.1.1'
 
+    compile ('com.squareup.retrofit2:retrofit:2.0.0-beta4') { exclude module: 'okhttp' }
+    compile 'com.squareup.okhttp3:okhttp:3.0.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+    compile 'io.reactivex:rxandroid:1.0.1'
+
     compile 'com.hannesdorfmann.parcelableplease:annotation:1.0.2'
     apt 'com.hannesdorfmann.parcelableplease:processor:1.0.2'
 }
