Issue #15 Passando a referência da obra por Intent para usar como objeto de filtro na consulta do Web service; Obtendo os fluxos da obra;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
             android:label="@string/title_activity_stage"
             android:parentActivityName=".main.MainActivity"
             android:theme="@style/Crs.NoActionBar"
+            android:launchMode="singleTop"
             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
