--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    supportLibraryVersion = '23.2.1'
+    materialDialogsVersion = '0.8.5.7@aar'
+    retrofitVersion = '2.0.0'
+    okHttpVersion = '3.0.0'
+    parcelablepleaseVersion = '1.0.2'
+}
