--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,5 +59,7 @@ dependencies {
         transitive = true;
     }
 
-    compile "com.jakewharton.timber:timber:4.1.2"
+    compile 'com.jakewharton.timber:timber:4.1.2'
+
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
