--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:windowSoftInputMode="stateVisible|adjustResize"
             />
         <activity
-            android:name=".main.MainActivity"
+            android:name=".mainscreen.MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -66,12 +66,12 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout"
             android:label="@string/title_activity_stage"
             android:launchMode="singleTop"
-            android:parentActivityName=".main.MainActivity"
+            android:parentActivityName=".mainscreen.MainActivity"
             android:theme="@style/Crs.NoActionBar"
             >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="br.com.libertsolutions.crs.app.main.MainActivity"
+                android:value="br.com.libertsolutions.crs.app.mainscreen.MainActivity"
                 />
         </activity>
         <activity
