--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath "io.realm:realm-gradle-plugin:0.88.2"
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath "io.realm:realm-gradle-plugin:1.1.0"
+        classpath 'io.fabric.tools:gradle:1.21.5'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     }
+    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
@@ -27,7 +29,7 @@ task clean(type: Delete) {
 ext {
     supportLibraryVersion = '23.4.0'
     materialDialogsVersion = '0.8.5.7@aar'
-    retrofitVersion = '2.0.0'
-    okHttpVersion = '3.0.0'
+    retrofitVersion = '2.1.0'
+    okHttpVersion = '3.3.1'
     parcelablepleaseVersion = '1.0.2'
 }
