--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,16 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
 
+    // Support library
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
     compile "com.android.support:design:${supportLibraryVersion}"
     compile "com.android.support:recyclerview-v7:${supportLibraryVersion}"
 
-    compile 'com.jakewharton:butterknife:7.0.1'
+    // View injection library
+    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
+    apt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
 
+    // Third material components library
     compile("com.github.afollestad.material-dialogs:core:${materialDialogsVersion}") {
         transitive = true
     }
@@ -48,6 +52,7 @@ dependencies {
         transitive = true
     }
 
+    // Http libraries
     compile ("com.squareup.retrofit2:retrofit:${retrofitVersion}") {
         exclude module: 'okhttp'
     }
@@ -57,15 +62,19 @@ dependencies {
     compile "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
     compile 'io.reactivex:rxandroid:1.2.1'
 
+    // Parcelable auto generator library
     compile "com.hannesdorfmann.parcelableplease:annotation:${parcelablepleaseVersion}"
     apt "com.hannesdorfmann.parcelableplease:processor:${parcelablepleaseVersion}"
 
+    // Crash reporting library
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
 
+    // Logging library
     compile 'com.jakewharton.timber:timber:4.1.2'
 
+    // Event bus library
     compile 'org.greenrobot:eventbus:3.0.0'
 }
 
