--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,5 @@ ext {
     retrofitVersion = '2.1.0'
     okHttpVersion = '3.3.1'
     parcelablepleaseVersion = '1.0.2'
+    butterKnifeVersion = '8.1.0'
 }
