--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         targetSdkVersion 23
         versionCode 23020
         versionName "0.2.0"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
