--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.21.5'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
     }
     configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
