--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,21 @@ apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'realm-android'
 apply plugin: 'me.tatarka.retrolambda'
 
+//noinspection GroovyAssignabilityCheck
+if (project.hasProperty("CRSEsquadriasRelease.signing")
+        && new File(project.property("CRSEsquadriasRelease.signing") + ".gradle").exists()) {
+    apply from: project.property("CRSEsquadriasRelease.signing") + ".gradle";
+}
+
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "br.com.libertsolutions.crs.app"
         minSdkVersion 15
-        targetSdkVersion 23
-        versionCode 23100
+        targetSdkVersion 24
+        versionCode 24100
         versionName "1.0.0"
         vectorDrawables.useSupportLibrary = true
     }
@@ -39,7 +45,6 @@ android {
 }
 
 repositories {
-    maven { url "https://jitpack.io" }
     maven { url 'https://maven.fabric.io/public' }
 }
 
