--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    supportLibraryVersion = '23.4.0'
-    materialDialogsVersion = '0.8.5.8@aar'
+    supportLibraryVersion = '24.1.1'
+    materialDialogsVersion = '0.8.6.2'
     retrofitVersion = '2.1.0'
     okHttpVersion = '3.4.1'
     parcelablepleaseVersion = '1.0.2'
