--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionCode 24100
         versionName "1.0.0"
         vectorDrawables.useSupportLibrary = true
+        setProperty("archivesBaseName", "CRS-$versionName")
     }
     buildTypes {
         release {
