--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,13 @@ if (project.hasProperty("CRSEsquadriasRelease.signing")
 }
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId "br.com.libertsolutions.crs.app"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 24100
         versionName "1.0.0"
         vectorDrawables.useSupportLibrary = true
