--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "io.realm:realm-gradle-plugin:1.1.0"
-        classpath 'io.fabric.tools:gradle:1.21.5'
+        classpath 'io.fabric.tools:gradle:1.21.6'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
     }
     configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
@@ -20,6 +20,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
 
@@ -28,7 +29,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    supportLibraryVersion = '24.1.1'
+    supportLibraryVersion = '25.4.0'
     materialDialogsVersion = '0.8.6.2'
     retrofitVersion = '2.3.0'
     okHttpVersion = '3.8.0'
