--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath "io.realm:realm-gradle-plugin:1.1.0"
+        classpath 'io.realm:realm-gradle-plugin:3.5.0'
         classpath 'io.fabric.tools:gradle:1.21.6'
-        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-        classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
     }
-    configurations.classpath.exclude group: 'com.android.tools.external.lombok'
 }
 
 allprojects {
@@ -26,13 +23,4 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
-}
-
-ext {
-    supportLibraryVersion = '25.4.0'
-    materialDialogsVersion = '0.8.6.2'
-    retrofitVersion = '2.3.0'
-    okHttpVersion = '3.8.1'
-    parcelablepleaseVersion = '1.0.2'
-    butterKnifeVersion = '8.2.1'
 }
