--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'realm-android'
 apply plugin: 'com.getkeepsafe.dexcount'
 
@@ -11,14 +10,14 @@ if (project.hasProperty("CRSEsquadriasRelease.signing")
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "br.com.libertsolutions.crs.app"
         minSdkVersion 15
-        targetSdkVersion 25
-        versionCode 25101
+        targetSdkVersion 27
+        versionCode 27101
         versionName "1.0.1"
         vectorDrawables.useSupportLibrary = true
         setProperty("archivesBaseName", "CRS-$versionName")
@@ -50,8 +49,8 @@ android {
 }
 
 ext {
-    support = '25.3.1'
-    materialDialogs = '0.9.4.5'
+    support = '27.1.1'
+    materialDialogs = '0.9.6.0'
     retrofit = '2.3.0'
     okhttp = '3.8.1'
     parcelableplease = '1.0.2'
@@ -64,57 +63,53 @@ repositories {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
     // Support
-    compile "com.android.support:appcompat-v7:${support}"
-    compile "com.android.support:design:${support}"
-    compile "com.android.support:recyclerview-v7:${support}"
-    compile "com.android.support:cardview-v7:${support}"
+    implementation "com.android.support:appcompat-v7:${support}"
+    implementation "com.android.support:design:${support}"
+    implementation "com.android.support:recyclerview-v7:${support}"
+    implementation "com.android.support:cardview-v7:${support}"
 
     // View Injection
-    compile "com.jakewharton:butterknife:${butterknife}"
+    implementation "com.jakewharton:butterknife:${butterknife}"
     annotationProcessor "com.jakewharton:butterknife-compiler:${butterknife}"
 
     // Third MD Components
-    compile "com.afollestad.material-dialogs:core:${materialDialogs}"
-    compile "com.afollestad.material-dialogs:commons:${materialDialogs}"
+    implementation "com.afollestad.material-dialogs:core:${materialDialogs}"
+    implementation "com.afollestad.material-dialogs:commons:${materialDialogs}"
 
     // Http
-    compile ("com.squareup.retrofit2:retrofit:${retrofit}") {
+    implementation ("com.squareup.retrofit2:retrofit:${retrofit}") {
         exclude module: 'okhttp'
     }
-    compile "com.squareup.retrofit2:adapter-rxjava:${retrofit}"
-    compile "com.squareup.retrofit2:converter-gson:${retrofit}"
-    compile "com.squareup.okhttp3:okhttp:${okhttp}"
-    compile "com.squareup.okhttp3:logging-interceptor:${okhttp}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit}"
+    implementation "com.squareup.retrofit2:converter-gson:${retrofit}"
+    implementation "com.squareup.okhttp3:okhttp:${okhttp}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${okhttp}"
 
     // Reactive Extensions
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.3.0'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.3.0'
 
     // Parcelable auto generator
-    compile "com.hannesdorfmann.parcelableplease:annotation:${parcelableplease}"
+    implementation "com.hannesdorfmann.parcelableplease:annotation:${parcelableplease}"
     annotationProcessor "com.hannesdorfmann.parcelableplease:processor:${parcelableplease}"
 
     // Crash Reporting
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-        transitive = true;
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true
     }
 
     // Logging
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.jakewharton.timber:timber:4.5.1'
 
     // Event Bus
-    compile 'org.greenrobot:eventbus:3.0.0'
+    implementation 'org.greenrobot:eventbus:3.0.0'
 
     // Memory Leak Analyzer
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${leakcanary}"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary}"
-}
-
-retrolambda {
-    javaVersion JavaVersion.VERSION_1_7
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${leakcanary}"
 }
 
 dexcount {
